# mongolbank-rate-downloader

./: .gitignore  LICENSE  README.md  gui.py  main.py  progress.py  pyinstaller-console.spec  pyinstaller.spec  pyinstaller_console.spec  requirements-dev.txt  requirements.txt  spider.py
Bash/: README.md  main.sh  scraper.sh
C++/: .devcontainer.json  CMakeLists.txt  Dockerfile  README.md  main.cpp  scraper.hpp
C++/src/: ThreadPool.h  main.cpp  scraper.hpp
Go/: .devcontainer.json  Dockerfile  README.md  go.mod  go.sum
Java/: .devcontainer.json  Dockerfile  README.md  build.gradle  settings.gradle
Java - Console/: .devcontainer.json  settings.gradle
JavaScript (Node.js)/: .devcontainer.json  Dockerfile  README.md  package-lock.json  package.json
JavaScript - Node.js/: .devcontainer.json  Dockerfile  README.md  package.json
Python/: .devcontainer.json  Dockerfile  README.md  pyinstaller.spec  requirements.txt
Python (GUI)/: README.md
Python - Console/: README.md  requirements.txt
Python - Console - Scrapy/: pyinstaller.spec
Python - GUI/: README.md  requirements.txt
Python - Tkinter - Scrapy/: requirements.txt
Rust/: .devcontainer.json  Cargo.toml  README.md
Rust/src/: main.rs  scrape.rs
VBA (Excel)/: README.md  config.json  index.xlsb
VBA - Excel/: README.md  config.json  index.xlsb
console_version/: pyinstaller.spec
src/: main.py  scrape.py  spider.py
src_console_version/: main.py
zzz Archive - non-camparable - Python (Tkinter, Threading, External library - Scrapy)/: pyinstaller.spec
Ω Archived: Python (GUI, Scrapy)/: README.md
(+18 files in other folders)
